[package]
name = "dungen-example-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_framepace = "0.15.0" # Because https://github.com/bevyengine/bevy/issues/10261
dungen = { path = "../.." }
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
